--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
   },
   "homepage": "https://github.com/PanayotCankov/tns-tools-cc#readme",
   "devDependencies": {
+    "fs-extra": "^0.24.0",
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
-    "grunt-exec": "^0.4.6"
+    "grunt-exec": "^0.4.6",
+    "mkdirp": "^0.5.1",
+    "typescript": "^1.6.2"
   },
   "scripts": {
     "install": "grunt install",
     "xcode": "open TNSApp/platforms/ios/TNSApp.xcodeproj",
     "ios": "grunt ios",
-    "android": "grunt android"
+    "android": "grunt android",
+    "watch": "grunt watch"
   }
 }
